k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sensusai
  labels:
    name: sensusai
    app: sensusai
